--- a/index.html
+++ b/index.html
@@ -1,66 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="stylesheet.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <script src="main.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="stylesheet.css" rel="stylesheet" />
 
-  <title>Directory Website</title>
-</head>
-<body>
+    <script src="main.js"></script>
 
-<!-- ===== NAVBAR ===== -->
-<header class="navbar-placeholder">
-  <!-- Add navbar here -->
-</header>
+    <title>Directory Website</title>
+  </head>
+  <body>
+    <!-- ===== NAVBAR ===== -->
+    <nav class="navbar-placeholder">
+      <!-- Add navbar here -->
+    </nav>
 
+    <!-- ===== HERO SECTION ===== -->
+    <header class="container hero">
+      <section class="hero-1">
+        <span class="subhead">   <!-- Title + subheading --> </span>
+      </section>
 
-<!-- ===== HERO SECTION ===== -->
-<div class="container hero">
-  <section class="hero-1">
-    <span class="subhead"></span>
-  </section>
+      <section class="article">
+        <!-- Hero article content goes here -->
+      </section>
+    </header>
 
-  <section class="article">
-    <!-- Hero article content goes here -->
-  </section>
-</div>
+    <!-- ===== ABOUT SECTION ===== -->
+    <article class="container abt-l">
+      <section class="subhead">   <!--  heading --></section>
 
+      <section class="header">   <!-- bio --></section>
 
-<!-- ===== ABOUT SECTION ===== -->
-<div class="container abt-l">
-  <section class="subhead"></section>
-  
-  <section class="header"></section>
+      <section class="article">   <!-- content --></section>
+    </article>
 
-  <section class="article"></section>
-</div>
+    <!-- ===== QUOTE SECTION ===== -->
+    <article class="container quote">
+      <section class="subhead">    <!-- heading + quote --> </section>
+    </article>
 
+    <!-- ===== STICKY IMAGE 3 PPL ===== -->
+    <article class="container marquee">
+      <section>
+        <div class="stk-img"><    <!-- Header + Content + 3 Person IMG--> /div>
+      </section>
+    </article>
 
-<!-- ===== QUOTE SECTION ===== -->
-<div class="container quote">
-  <section class="subhead"></section>
-</div>
+    <!-- ===== FOOTER ===== -->
+    <footer class="container">
+      <section class="footer">    <!-- footer --> </section>
+    </footer>
 
-
-<!-- ===== STICKY IMAGE 3 PPL ===== -->
-<div class="container marquee">
-  <section>
-    <div class="stk-img"></div>
-  </section>
-</div>
-
-
-<!-- ===== FOOTER ===== -->
-<div class="container">
-  <section class="footer"></section>
-</div>
-
-
-<script src="js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
