--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </p>
       <div class="card-mini">video content goes on this card</div>
     </div>
-    <div class="card-mini-m"> </div>
+    <div class="card-mini-m"><h1>INFO SECTION</h1> </div>
 
     <!-- ===== BOOTSTRAP JS ===== -->
     <script src="js/bootstrap.bundle.min.js"></script>
