--- a/index.html
+++ b/index.html
@@ -57,28 +57,49 @@
         </div>
       </div>
     </nav>
-    <header class="old-hero">
-      <div class="cardd">
-        <span class="hedda"><h1>COHORT 33</h1></span><button class="button">CLICK ME</button>
-        <figure>
-          <img src="computer_480.png" class="ogcomp" />
-          <div class="static-container">
-            <!-- <img src="static.jpg" class="static" /> -->
-          </div>
-        </figure>
-      </div>
-    </header>
-   <h2 class="meep">WELCOME YOU BELONG<br> HERE</h2>
-      <p class="hero-1-text">
-        Welcome to the Fall 2025 Cohort 33 Directory Website!<br />
-        Here, you'll find information about our talented group of individuals,
-        their projects, and more. Explore and get to know us better!
-      </p>
-      <div class="card-mini">video content goes on this card</div>
-    </div>
-    <div class="card-mini-m"><h1>INFO SECTION</h1> </div>
+  <header class="old-hero">
+    <div class="card-mini"></div>
+  <div class="cardd">
+  
+    <article><span class="hedda">
+      <h1>COHORT 33</h1>
+    </span></article>
+    
 
-    <!-- ===== BOOTSTRAP JS ===== -->
-    <script src="js/bootstrap.bundle.min.js"></script>
-  </body>
+    <!-- your button class kept -->
+    <button id="video-button" class="button">press play</button>
+
+    <figure>
+         <img src="computer_480.png" class="ogcomp" />
+      <!-- VIDEO CONTAINER inserted, class names adjusted to match your structure -->
+      <div class="video-container">
+        <div class="overlay"></div>
+        <video class="video" loop>
+          <source src="verizon-video.mp4" type="video/mp4">
+        </video>
+      </div>
+
+      <!-- your original computer image kept -->
+
+    </figure>
+  </div>
+</header>
+<main>
+  <div class="mini-card-1"></div><div class="hero-1">
+    <h2 class="meep">WELCOME YOU BELONG<br> HERE</h2>
+    <p class="hero-1-text">
+      Creators. Innovators. Future technologists.<br><br>
+      This directory highlights the students of Cohort 33—creators, builders, and problem-solvers learning to shape the future of tech.
+    </p> 
+  </div>
+<container><img class="lala" src="Unlimited..gif"></container>
+
+  <article class="info-section">
+    <div class="card-mini">
+      <div class="card-mini-m"><span class="meep  info"><h1>INFO SECTION</h1></span></div>
+    </div>
+  </article>
+</div>
+</main>
+
 </html>
