--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link href="stylesheet.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/figlet@1.2.4/figlet.min.js"></script>
+     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script src="main.js"></script>
     <title>Directory Website</title>
   </head>
@@ -62,7 +67,7 @@
   <div class="cardd">
   
     <article><span class="hedda">
-      <h1>COHORT 33</h1>
+      <h1 class = "bounce-in">COHORT 33</h1>
     </span></article>
     
 
@@ -86,8 +91,8 @@
 </header>
 <main>
   <div class="mini-card-1"></div><div class="hero-1">
-    <h2 class="meep">WELCOME YOU BELONG<br> HERE</h2>
-    <p class="hero-1-text">
+    <h2 class="meep"><span class = "headline">WELCOME</span> <span class = "tagline">YOU BELONG<br> HERE</span></h2>
+    <p class="hero-1-text punchline">
       Creators. Innovators. Future technologists.<br><br>
       This directory highlights the students of Cohort 33—creators, builders, and problem-solvers learning to shape the future of tech.
     </p> 
@@ -103,5 +108,6 @@
     <!-- ===== BOOTSTRAP JS ===== -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
+
   </body>
 </html>
