--- a/directory.html
+++ b/directory.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="directory.html">Directory</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</axw>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
           </ul>
           <span class="navbar-text">COHORT 33</span>
