--- a/index.html
+++ b/index.html
@@ -3,33 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bogle&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bogle&family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
+    <!-- YOUR CSS -->
     <link href="stylesheet.css" rel="stylesheet" />
+
+    <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/figlet@1.2.4/figlet.min.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
+
     <title>Directory Website</title>
   </head>
 
   <body class="landing">
     <!-- ===== NAVBAR ===== -->
     <nav
-      class="navbar navbar-expand-lg bg-dark bg-body-tertiary fixed-top bg-body-tertiary"
+      class="navbar navbar-expand-lg bg-dark bg-body-tertiary fixed-top"
       data-bs-theme="dark"
     >
       <div class="container-fluid">
         <a class="navbar-brand" href="#">DEV/MISSION</a>
+
         <button
           class="navbar-toggler"
           type="button"
@@ -41,10 +48,11 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="directory.html">Directory</a>
@@ -53,55 +61,73 @@
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
           </ul>
+
           <span class="navbar-text">COHORT 33</span>
         </div>
       </div>
     </nav>
-  <header class="old-hero">
-    <div class="card-mini"></div>
-  <div class="cardd">
-  
-    <article><span class="hedda">
-      <h1>COHORT 33</h1>
-    </span></article>
-    
 
-    <!-- your button class kept -->
-    <button id="video-button" class="button">press play</button>
+    <!-- ===== HERO ===== -->
+    <header class="old-hero">
+      <div class="card-mini"></div>
 
-    <figure>
-         <img src="computer_480.png" class="ogcomp" />
-      <!-- VIDEO CONTAINER inserted, class names adjusted to match your structure -->
-      <div class="video-container">
-        <div class="overlay"></div>
-        <video class="video" loop>
-          <source src="verizon-video.mp4" type="video/mp4">
-        </video>
-      </div> 
+      <div class="cardd">
+        <article>
+          <span class="hedda">
+            <h1>COHORT 33</h1>
+          </span>
+        </article>
 
-      <!-- your original computer image kept -->
+        <!-- BUTTON -->
+        <button id="video-button" class="button">press play</button>
 
-    </figure>
-  </div>
-</header>
-<main>
-  <div class="mini-card-1"></div><div class="hero-1">
-    <h2 class="meep">WELCOME YOU BELONG<br> HERE</h2>
-    <p class="hero-1-text">
-      Creators. Innovators. Future technologists.<br><br>
-      This directory highlights the students of Cohort 33—creators, builders, and problem-solvers learning to shape the future of tech.
-    </p> 
-  </div>
-<container><img class="lala" src="Unlimited..gif"></container>
+        <!-- COMPUTER + VIDEO -->
+        <figure>
+          <img src="computer_480.png" class="ogcomp" />
 
-  <article class="info-section">
-    <div class="card-mini">
-      <div class="card-mini-m"><span class="meep  info"><h1>INFO SECTION</h1></span></div>
-    </div>
-    <div class="card-mini-m"> </div>
+          <div class="video-container">
+            <div class="overlay"></div>
+            <video class="video" loop>
+              <source src="verizon-video.mp4" type="video/mp4" />
+            </video>
+          </div>
+        </figure>
+      </div>
+    </header>
 
-    <!-- ===== BOOTSTRAP JS ===== -->
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="main.js"></script>
+    <!-- ===== MAIN CONTENT ===== -->
+    <main>
+      <div class="mini-card-1"></div>
+
+      <div class="hero-1">
+        <h2 class="meep">
+          WELCOME YOU BELONG<br />
+          HERE
+        </h2>
+
+        <p class="hero-1-text">
+          Creators. Innovators. Future technologists.<br /><br />
+          This directory highlights the students of Cohort 33—creators,
+          builders, and problem-solvers learning to shape the future of tech.
+        </p>
+      </div>
+
+      <!-- GIF -->
+      <div class="image-container">
+        <img class="lala" src="Unlimited..gif" />
+      </div>
+
+      <!-- INFO SECTION -->
+      <article class="info-section">
+        <div class="card-mini">
+          <div class="card-mini-m">
+            <span class="meep info"><h1>INFO SECTION</h1></span>
+          </div>
+        </div>
+      </article>
+    </main>
+
+    <!-- BOOTSTRAP JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
