--- a/directory.html
+++ b/directory.html
@@ -1,24 +1,37 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+​
+    
+​
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    ]
-    <title>Document</title>
+     <link
+      href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bogle&family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+     <link
+      href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"
+      rel="stylesheet"
+    />
+    <link href="dir.css" rel="stylesheet"  />
   </head>
-  <main>
-    <nav
-      class="navbar navbar-expand-lg bg-dark bg-body-tertiary fixed-top bg-body-tertiary"
+     <nav
+      class="navbar navbar-expand-lg bg-dark bg-body-tertiary fixed-top"
       data-bs-theme="dark"
     >
       <div class="container-fluid">
         <a class="navbar-brand" href="#">DEV/MISSION</a>
+​
         <button
           class="navbar-toggler"
           type="button"
@@ -30,10 +43,11 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+​
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="directory.html">Directory</a>
@@ -42,11 +56,14 @@
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
           </ul>
+​
           <span class="navbar-text">COHORT 33</span>
         </div>
       </div>
     </nav>
-    <body>
+​
+    <main>
+         <body>
       <div class="card text-bg-dark">
         <img src="like.gif" class="card-img" alt="..." />
         <div class="card-img-overlay">
@@ -55,11 +72,38 @@
             This is a wider card with supporting text below as a natural lead-in
             to additional content. This content is a little bit longer.
           </p>
-          <p class="card-text"><small>Last updated 3 mins ago</small></p>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+     
+      <div class="students-container container-fluid">
+         <h1 class="mb-4">MEET OUR CLASS</h1>
+        <div class="students-name-tag" id="js-students-name-tag"></div>
+      </div>
+​
+      <div class="teachers-container">
+        <h1 class="mb-4">MEET OUR INSTRUCTORS</h1>
+​
+        <div
+          class="row justify-content-center align-items-center teachers-name-tag"
+          id="js-teachers-name-tag"
+        >
+          <!-- JS inserts instructor cards here -->
+        </div>
+      </div>
+    </main>
+    <!--Boostrap JS-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
   </body>
-    </body>
-  </main>
 </html>
+Shared in
+
+Luis Ramirez
+3 minutes ago
+
+
+
