add loading gif

--- a/directory.html
+++ b/directory.html
@@ -85,7 +85,7 @@
     ​
     <main class="my-container">
       <article class="loading">
-        <img src="like.gif" class="card-img" alt="loading gif">
+        <img src="loading.gif" class="card-img" alt="loading gif">
       </article>
       <!-- <div class="students-container container-fluid"> -->
       <article class="students">
